--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,9 @@ p{
     text-align: center;
     font-family: Arial;
 }
+#source{
+    text-align: left;
+}
 #welcome{
     font-size: 300%;
 }
@@ -25,4 +28,11 @@ a:hover{
 iframe{
     width: 500px;
     height: 300px;
+    
+}
+a:visited{
+    color: rgb(94, 36, 15);
+}
+a:link{
+    color:coral;
 }
